fixing buttom errors

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -93,7 +93,9 @@
         <section class="trip_call">
             <h2>Have fun and see our trips!</h2>
             <p>Never give up and wake up your adventure spirit.</p>
-            <a href="trips.html"><button>START THE ADVENTURE</button></a
+            <form class="button_call" action="trips.html" method="get">
+                <button type="submit">START THE ADVENTURE</button>
+            </form>
         </section>
     </main>
     <footer>
