--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -26,7 +26,9 @@
         <section class="trip_call">
             <h1>Get Rafting Trip Today!</h1>
             <p>Rafting is an exciting and adventurous way to explore.</p>
-            <a href="contact.html"><button>GET THE TRIP</button></a>
+            <form class="button_call" action="contact.html" method="get">
+                <button type="submit">GET THE TRIP</button>
+            </form>
         </section>
         <section class="pre_places">
             <h2>Let's go with us!</h2>
