--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -102,7 +102,7 @@
                 <thead>
                     <tr>
                         <th colspan="3">
-                            <h2>The trip information center</h2>
+                            <h2 id="trip-info">The trip information center</h2>
                         </th>
                     </tr>
                 </thead>
