--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -101,9 +101,7 @@
             <table class="trips_information">
                 <thead>
                     <tr>
-                        <th colspan="3">
-                            <h2 id="trip-info">The trip information center</h2>
-                        </th>
+                        <th colspan="3">The trip information center</th>
                     </tr>
                 </thead>
                 <tbody>
