fixing border video

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -84,7 +84,7 @@
             <aside>
                 <h2>This would be your experience!</h2>
                 <iframe src="https://www.youtube-nocookie.com/embed/9txxodYuZGc?si=psDFMDA4f-K1C5kH"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <p>You always will get new adventure choosen are services</p>
