new pcitures and text

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section class="full_width">
-            <img src="images/hero.jpg" alt="Rafting Style">
+            <img src="images/river-wide.jpg" alt="Rafting Style">
             <h1>Start Your Adventure Style life with us</h1>
             <p>In Splash Rafting, you are the most important part of one new adventure.</p>
         </section>
@@ -61,11 +61,11 @@
         <section class="mini_gallery">
             <h2>Adventure Awaits You</h2>
             <figure>
-                <img src="images/serie_01.jpg" alt="Rogue River">
+                <img src="images/mini_gallery01.jpg" alt="Rogue River">
                 <figcaption>Rogue River</figcaption>
             </figure>
             <figure>
-                <img src="images/serie_02.jpg" alt="Arkansas River">
+                <img src="images/mini_gallery02.jpg" alt="Arkansas River">
                 <figcaption>Arkansas River</figcaption>
             </figure>
         </section>
